# gnome-cpp-example

./: README.md  meson.build  org.gnome.Example.json  org.gnome.Example.json~
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: POTFILES  meson.build
src/: app-config.h  application.cpp  application.gresource.xml  application.h  application.ui  main-window.cpp  main-window.h  main-window.ui  main.cpp  meson.build
src/about-dialog/: about-dialog.cpp  about-dialog.h
src/application/: application.cpp  application.h
src/main-window/: main-menu.ui  main-window.cpp  main-window.h  main-window.ui
